--- a/lighting_control_system/colors.html
+++ b/lighting_control_system/colors.html
@@ -11,7 +11,7 @@
 
     <link href="bootstrap.min.css" rel="stylesheet">
     <link href="bootstrap_toggle.min.css" rel="stylesheet">
-    <link href="bootstrap_slider.min.css" rel="stylesheet">
+    <link href="bootstrap_colorpicker.min.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
   </head>
 
@@ -31,8 +31,8 @@
 
         <div class="collapse navbar-collapse" id="responsive-navbar">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Lumière blanche</a></li>
-            <li><a href="colors.html">Couleurs</a></li>
+            <li><a href="white_light.html">Lumière blanche</a></li>
+            <li class="active"><a href="#">Couleurs</a></li>
           </ul>
         </div>
       </div>
@@ -67,35 +67,11 @@
       <div class="col-xs-12 col-sm-8">
         <div class="panel panel-default">
           <div class="panel-heading">
-            <h3 class="panel-title">Régler l'intensité</h3>
+            <h3 class="panel-title">Régler la couleur</h3>
           </div>
           <div class="panel-body">
-            <div class="col-xs-12 col-md-6">
-              <input id="intensity-slider" type="text" data-slider-min="0" data-slider-max="255" data-slider-step="1" data-slider-value="0"/>
-            </div>
-            <div class="col-xs-12 col-md-6">
-              <div>
-                Intensité : <span id="intensity-value">???</span>
-              </div>
-            </div>
-          </div>
-          <div class="panel-footer">
-            <button type="button" class="btn btn-success">Valider</button>
-          </div>
-        </div>
-
-        <div class="panel panel-default">
-          <div class="panel-heading">
-            <h3 class="panel-title">Régler la luminosité</h3>
-          </div>
-          <div class="panel-body">
-            <div class="col-xs-12 col-md-6">
-              <input id="luminosity-slider" type="text" data-slider-min="0" data-slider-max="4095" data-slider-step="10" data-slider-value="0"/>
-            </div>
-            <div class="col-xs-12 col-md-6">
-              <div>
-                Luminosité : <span id="luminosity-value">???</span>
-              </div>
+            <div class="col-xs-12">
+              <div id="color-picker"></div>
             </div>
           </div>
           <div class="panel-footer">
@@ -108,8 +84,8 @@
     <script src="jquery.min.js"></script>
     <script src="bootstrap.min.js"></script>
     <script src="bootstrap_toggle.min.js"></script>
-    <script src="bootstrap_slider.min.js"></script>
-    <script src="white_light.js"></script>
+    <script src="bootstrap_colorpicker.min.js"></script>
+    <script src="colors.js"></script>
 
   </body>
 </html>
