--- a/lighting_control_system/white_light.html
+++ b/lighting_control_system/white_light.html
@@ -62,6 +62,15 @@
             </div>
           </div>
         </div>
+
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h3 class="panel-title">Couleur</h3>
+          </div>
+          <div class="panel-body">
+            <div id="color"></div>
+          </div>
+        </div>
       </div>
 
       <div class="col-xs-12 col-sm-8">
