--- a/lighting_control_system/colors.html
+++ b/lighting_control_system/colors.html
@@ -84,16 +84,22 @@
             </div>
           </div>
           <div class="panel-footer">
-            <button type="button" class="btn btn-success">Valider</button>
+            <button id="color-validate" type="button" class="btn btn-success">Valider</button>
           </div>
         </div>
       </div>
+    </div>
+
+    <div class="alert alert-danger alert-dismissible" role="alert" id="error">
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+      Une erreur est survenue
     </div>
 
     <script src="jquery.min.js"></script>
     <script src="bootstrap.min.js"></script>
     <script src="bootstrap_toggle.min.js"></script>
     <script src="bootstrap_colorpicker.min.js"></script>
+    <script src="script.js"></script>
     <script src="colors.js"></script>
 
   </body>
