--- a/lighting_control_system/white_light.html
+++ b/lighting_control_system/white_light.html
@@ -84,12 +84,12 @@
             </div>
             <div class="col-xs-12 col-md-6">
               <div>
-                Intensité : <span id="intensity-value">???</span>
+                Intensité : <span id="intensity-value">0</span>
               </div>
             </div>
           </div>
           <div class="panel-footer">
-            <button type="button" class="btn btn-success">Valider</button>
+            <button id="intensity-validate" type="button" class="btn btn-success">Valider</button>
           </div>
         </div>
 
@@ -103,21 +103,27 @@
             </div>
             <div class="col-xs-12 col-md-6">
               <div>
-                Luminosité : <span id="luminosity-value">???</span>
+                Luminosité : <span id="luminosity-value">0</span>
               </div>
             </div>
           </div>
           <div class="panel-footer">
-            <button type="button" class="btn btn-success">Valider</button>
+            <button id="luminosity-validate" type="button" class="btn btn-success">Valider</button>
           </div>
         </div>
       </div>
+    </div>
+
+    <div class="alert alert-danger alert-dismissible" role="alert" id="error">
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+      Une erreur est survenue
     </div>
 
     <script src="jquery.min.js"></script>
     <script src="bootstrap.min.js"></script>
     <script src="bootstrap_toggle.min.js"></script>
     <script src="bootstrap_slider.min.js"></script>
+    <script src="script.js"></script>
     <script src="white_light.js"></script>
 
   </body>
