--- a/lighting_control_system/white_light.html
+++ b/lighting_control_system/white_light.html
@@ -71,6 +71,15 @@
             <div id="color"></div>
           </div>
         </div>
+
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h3 class="panel-title">Intensité</h3>
+          </div>
+          <div class="panel-body">
+            <span id="intensity" class="lead">0</span>
+          </div>
+        </div>
       </div>
 
       <div class="col-xs-12 col-sm-8">
